# artifacts/api-server/src/routes/index.ts
@@ -8,6 +8,7 @@ import fabricRollsRouter from "./fabric-rolls.js";
 import cuttingRouter from "./cutting.js";
 import allocationRouter from "./allocation.js";
 import receivingRouter from "./receiving.js";
+import outsourceRouter from "./outsource.js";
 import finishingRouter from "./finishing.js";
 import finishedGoodsRouter from "./finished-goods.js";
 import inventoryRouter from "./inventory.js";
@@ -27,6 +28,7 @@ router.use(fabricRollsRouter);
 router.use(cuttingRouter);
 router.use(allocationRouter);
 router.use(receivingRouter);
+router.use(outsourceRouter);
 router.use(finishingRouter);
 router.use(finishedGoodsRouter);
 router.use(inventoryRouter);
